php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #38377 session_destroy() gives warning after session_regenerate_id()
Submitted: 2006-08-08 09:09 UTC Modified: 2006-08-08 19:45 UTC
Votes:2
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:2 (100.0%)
Same OS:2 (100.0%)
From: dhrubab at gmail dot com Assigned: iliaa (profile)
Status: Closed Package: Session related
PHP Version: 5.1.4 OS: Linux
Private report: No CVE-ID: None
 [2006-08-08 09:09 UTC] dhrubab at gmail dot com
Description:
------------
If you call session_destroy() after calling session_regenerate_id() then it results in a warning.  This should not be the case.

My entire php configuration is at the following url as a static html file.

http://static.dhruba.net/php/phpinfo.php.html

Kindly help me fix this bug for the next 5.x release.  Thanks.

Reproduce code:
---------------
session.php

<?php
session_start();
session_regenerate_id();
session_destroy();
?>


Expected result:
----------------
I expect to see nothing because it worked.

Actual result:
--------------
I see the following error message.

Warning: session_destroy() [function.session-destroy]: Session object destruction failed in session.php on line 4

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-08-08 14:57 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2006-08-08 19:25 UTC] dhrubab at gmail dot com
Was this bug marked as fixed simply because a previous bug of this kind was marked as fixed or because you think this issue is really fixed in 5.1.4?  Kindly tell me which stable release this issue is fixed in.
 [2006-08-08 19:41 UTC] dhrubab at gmail dot com
For the record I am aware of the previous bug reported for 5.1.2 below.

http://bugs.php.net/bug.php?id=36872

However I am reporting for 5.1.4 where the problem still exists.  I will await feedback as to which version this is fixed in.  Thanks.
 [2006-08-08 19:43 UTC] dhrubab at gmail dot com
Sorry my last comment was made before I got tony's last message.
 [2006-08-08 19:45 UTC] dhrubab at gmail dot com
From tony's link it looks like this is for the 5.2 branch evident from (Branch: PHP_5_2).  That's all I wanted to know.  Thanks and sorry for the hassle.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC