Fixed bug #38377 (session_destroy() gives warning after session_regenerate_id()).